# raykit-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  make.bat
.github/workflows/: cmake-multi-platform.yml  cmake_build.yml
cmake/: desktop.cmake  toolchain-linux.cmake  toolchain-macos.cmake  toolchain-mingw64.cmake
src/: main.cpp
src/game/: Game.cpp  Game.hpp
src/game/net/: PacketType.hpp
src/game/scenes/: ExampleScene.cpp  ExampleScene.hpp  SpinningTextureScene.cpp  SpinningTextureScene.hpp  TimerScene.cpp  TimerScene.hpp
src/raykit/assets/: AssetManager.cpp  AssetManager.hpp
src/raykit/net/: MultiplayerAPI.cpp  MultiplayerAPI.hpp  RawPacket.hpp
src/raykit/nodes/: Timer.cpp  Timer.hpp
src/raykit/scene/: SceneManager.cpp  SceneManager.hpp
src/toolbox/: SceneManager.cpp  SceneManager.hpp
src/toolbox/scene/: Scene.hpp  SceneManager.cpp  SceneManager.hpp
